# aoc2021

./: pyproject.toml
src/day01/: solution.py  test_solution.py
