[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = "Advent of Code 2021"
authors = ["Jaime Jaramillo <jaimedario88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.12.1"
mypy = "^0.910"
black = {version = "^21.11b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
